# resource-adapter

./: .gitignore  README.md  pyproject.toml
resource_adapter/: adapter.py
resource_adapter/aws/: ec2.py  ecr.py  iam.py  s3.py
